--- a/bower.json
+++ b/bower.json
@@ -1,7 +1,7 @@
 {
   "name": "anim8js-pixi",
   "version": "1.0.0",
-  "homepage": "http://clickermonkey.github.io/anim8js-pixi",
+  "homepage": "http://anim8js.github.io/anim8js-pixi",
   "authors": [
     "Philip Diffenderfer <pdiffenderfer@gmail.com>"
   ],
